2006-02-05  Prakash Punnoor <prakash@punnoor.de>

	* admin/pkgconfig/openal.pc.in: also include pthread related flags -
	the lib flags shouldn't be needed though and the acx_pthread.m4 macro
	should be fixed though, so that openal itself gets linked to pthread;
	reverting last this patch, as acx_pthread hopefully got a work-around
	for Linux
	
	* admin/pkgconfig/openal-config.in: commenting out pthread related flags,
	as openal should be built that way that apps linking to openal shouldn't
	know anything about it (unless in static case)
	
	* admin/autotools/m4/acx_pthread.m4: check for pthread first on Linux
	thus making openal actually link to pthread; this probably needs more
	fixing

2006-02-04  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: handle dl as configure.ac

2006-02-04  Sven Panne  <sven.panne@aedion.de>

	* configure.ac: Fixes for Cygwin. Look for dlfcn.h and an option -ldl to
	decide whether dynamic loading of libraries is possible, as Cygwin
	doesn't need and doesn't support -ldl. Fixed test for native Windows
	backend. Fixed CR/LF vs. LF issue in configure.

2006-02-03  Sven Panne  <sven.panne@aedion.de>

	* CMakeLists.txt, configure.ac src/al_source.c: Renamed LINUX_AL to
	AL_SUPPORT_BYTE_LOKI_SOURCE_ATTR_, which is a bit clearer.

	* src/al_source.c, src/al_types.h, test/testloop.c: Removed the
	AL_STREAMING source attribute. It was non-standard, undocumented and
	didn't do anything.

	* configure.ac: Use AC_DEFINE instead of specifying preprocessor defines
	by hand.

2006-01-31  Prakash Punnoor <prakash@punnoor.de>

	* admin/pkgconfig/Makefile.am: use more portable way of defining
	pkgconfdir (by Andreas Bierfert)
	
	* common/include/AL/al.h, common/include/AL/alc.h, CMakeLists.txt,
	configure.ac: use visibility attribute only when building OpenAL lib
	
2006-01-23  Sven Panne  <sven.panne@aedion.de>

	* src/alc/alc_context.c (_alcSetContext, _alcInitContext): Initialize