@@ -1,3 +1,11 @@
+2006-02-13  Prakash Punnoor <prakash@punnoor.de>
+
+	* src/al_matrix.c, src/al_matrix.c: add _alVecMatrixMulA3; deactivate
+	remaining code, as it is unused
+	
+	* src/alc/alc_speaker.c: use arrays and _alVecMatrixMulA3 instead of
+	ALmatrix and co.
+
 2006-02-05  Prakash Punnoor <prakash@punnoor.de>
 
 	* admin/pkgconfig/openal.pc.in: also include pthread related flags -
